k8s/blog/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jerbo-blog
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: jerbo-blog
